corrected footer overlapping with "readmore" button on low res devices

--- a/themes/hugo-bootstrap-premium/static/css/style.css
+++ b/themes/hugo-bootstrap-premium/static/css/style.css
@@ -73,6 +73,7 @@ time {
 
 body>.container {
     padding: 90px 30px 0;
+    padding-bottom: 20px;
 }
 
 .navbar-default {
